fix(style): table align overrides by default user agent styles

--- a/_app/assets/_less/app.less
+++ b/_app/assets/_less/app.less
@@ -220,11 +220,11 @@ body:hover .latest {
   &.unavailable {
 
     &:before {
-      background: #f30;
+      background: #ccc;
     }
 
     a {
-      color: #f30;
+      color: #ccc;
     }
   }
 }
@@ -447,7 +447,8 @@ body:hover .latest {
 
     th {
       border-bottom: 2px solid fade(@text-color, 6%);
-      text-align: start;
+      // Override default user agent stylesheet
+      text-align: left;
     }
 
     td {
